# Library-Management-System

./: .dockerignore  CMakeLists.txt  Dockerfile  library.db  railway.json
.cache/clangd/index/: auth_controller.h.C238C7A1EE255437.idx  auth_middleware.h.FDF92EB4EB78CBFF.idx  catalog_controller.h.03B199603E45C338.idx  circulation_controller.h.B4E1E3682787B0C3.idx  database.cpp.B71BA6A69DB7907F.idx  database.h.9E03945BF4697C0C.idx  fine_controller.h.43EDEF829564213B.idx  httplib.h.143B13E8562B70A9.idx  json.hpp.9D423090B52910DB.idx  jwt.h.86F5DAEE444DF2FC.idx  main.cpp.2F1FF2BFA98E2888.idx  member_controller.h.DC70D9B063D3A8BB.idx  password.h.2AAEA9B0FF4E8597.idx  report_controller.h.0DA24608C5B14AAA.idx  search_controller.h.72A71BF9C9DF5712.idx
include/: jwt.h
src/: main.cpp
src/controllers/: auth_controller.h  catalog_controller.h  circulation_controller.h  fine_controller.h  member_controller.h  report_controller.h  search_controller.h
src/db/: database.cpp  database.h
src/middleware/: auth_middleware.h
src/utils/: password.h
static/: index.html
